--- a/collectd-pika/manager_pika.conf.sample
+++ b/collectd-pika/manager_pika.conf.sample
@@ -5,19 +5,14 @@
 
 <Plugin python>
   ModulePath "/usr/lib64/collectd/plugins/"
-  Import "pika_info"
+  Import "pika_plugin"
 
-  <Module pika_info>
+  <Module pika_plugin>
     Host "192.168.1.1"
     Port 9221
     # Un-comment to use AUTH
     Auth "xxxxxxxxxx"
     #Verbose true
     #Catch Redis metrics (prefix with Redis_)
-    Instance "pika"
-    connected_clients "GAUGE"
-    total_commands_processed "COUNTER"
-    used_cpu_user "COUNTER"
-    instantaneous_ops_per_sec "COUNTER"
   </Module>
 </Plugin>
